--- a/local.properties
+++ b/local.properties
@@ -1,10 +1,8 @@
-
-
 ## This file must *NOT* be checked into Version Control Systems,
 # as it contains information specific to your local configuration.
 #
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Mar 22 21:33:40 ICT 2022
-sdk.dir=/Users/nhatvu/Library/Android/sdk
+#Wed Dec 07 09:43:23 ICT 2022
+sdk.dir=C\:\\Users\\dang2\\AppData\\Local\\Android\\Sdk
