--- a/apikey.properties
+++ b/apikey.properties
@@ -1,14 +1,14 @@
 ## DEV SITE
-BASE_URL_DEV="https://dev.fatherofapps.com"
+BASE_URL_DEV="https://fakestoreapi.com"
 ACCESS_TOKEN_DEV="key_dev_1"
 
 
 # STAGING Site
-BASE_URL_STAGING="https://staging.fatherofapps.com"
+BASE_URL_STAGING="https://fakestoreapi.com"
 ACCESS_TOKEN_STAGING=""
 
 
 ## LIVE SITE
-BASE_URL_LIVE="https://fatherofapps.com"
+BASE_URL_LIVE="https://fakestoreapi.com"
 ACCESS_TOKEN_LIVE=""
 
