--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 def apikeyPropertiesFile = rootProject.file("apikey.properties")
@@ -80,13 +81,21 @@ android {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.9.0'
 
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.6.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.6.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
+
+    //firebase
+    implementation platform('com.google.firebase:firebase-bom:32.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-messaging:23.1.2'
+
+
+    // loading
 
 
     // splash screen
@@ -98,7 +107,7 @@ dependencies {
 
     // view model scope
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
 
     // retrofit
     def retrofit_version = '2.9.0'
@@ -106,16 +115,16 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
 
     // moshi
-    def  moshi_version ='1.11.0'
+    def  moshi_version = '1.15.0'
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
 
     // okhttpclient
-    def ok_httpclient_version = '4.9.2'
+    def ok_httpclient_version = '5.0.0-alpha.11'
     implementation "com.squareup.okhttp3:okhttp:$ok_httpclient_version"
     implementation "com.squareup.okhttp3:logging-interceptor:$ok_httpclient_version"
 
     // glide library
-    def glide_version = '4.13.2'
+    def glide_version = '4.15.1'
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
     // hilt
@@ -123,18 +132,18 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
 
     // coroutine
-    def  coroutines_version = '1.6.1'
+    def  coroutines_version = '1.7.1'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
 
     // viewpager 2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
 
-    implementation "androidx.activity:activity-ktx:1.4.0"
+    implementation 'androidx.activity:activity-ktx:1.7.2'
 
     //circle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    def room_version = "2.4.3"
+    def room_version = '2.5.1'
     implementation("androidx.room:room-runtime:$room_version")
     // Kotlin annotation processing tool (kapt)
     kapt("androidx.room:room-compiler:$room_version")
@@ -143,8 +152,8 @@ dependencies {
     // room test helper
     testImplementation("androidx.room:room-testing:$room_version")
 
-    def fragment_version = '1.5.4'
-    def fragment_ktx_version = '1.5.4'
+    def fragment_version = '1.6.0'
+    def fragment_ktx_version = '1.6.0'
     // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
     debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_ktx_version"
@@ -152,27 +161,27 @@ dependencies {
     // dependencies for local unit test
     def junit_version = '4.13.2'
     testImplementation "junit:junit:$junit_version"
-    testImplementation 'com.google.truth:truth:1.1.3'
+    testImplementation 'com.google.truth:truth:1.1.4'
 
-    def mockito_version = '3.12.4'
+    def mockito_version = '5.3.1'
     testImplementation "org.mockito:mockito-core:$mockito_version"
-    testImplementation 'org.mockito:mockito-inline:2.25.0'
+    testImplementation 'org.mockito:mockito-inline:5.2.0'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     testImplementation "androidx.test.ext:junit-ktx:1.1.5"
-    testImplementation "org.robolectric:robolectric:4.5.1"
-    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.robolectric:robolectric:4.10.3'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
     def androidx_test_core_version = '1.5.0'
     implementation "androidx.test:core:$androidx_test_core_version"
 
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "junit:junit:$junit_version"
-    androidTestImplementation 'com.google.truth:truth:1.1.3'
+    androidTestImplementation 'com.google.truth:truth:1.1.4'
     androidTestImplementation "org.mockito:mockito-core:$mockito_version"
     androidTestImplementation "org.mockito:mockito-android:$mockito_version"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
     androidTestImplementation "androidx.test.ext:junit-ktx:1.1.5"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation 'androidx.arch.core:core-testing:2.2.0'
     androidTestImplementation "com.squareup.okhttp3:mockwebserver:$ok_httpclient_version"
     androidTestImplementation  "com.google.dagger:hilt-android-testing:$hilt_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
