--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.31"
-    ext.hilt_version = '2.38.1'
+    ext.hilt_version = '2.46.1'
     repositories {
         google()
         mavenCentral()
@@ -11,6 +11,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10"
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3'
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 
