--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Main">
+        android:theme="@style/Theme.Main"
+        android:usesCleartextTraffic="true">
         <receiver
             android:name=".ui.widget.TestWidget"
             android:exported="false">
@@ -33,15 +34,15 @@
             android:name=".activities.MainActivity2"
             android:exported="false" />
 
-        <service
-            android:name=".common.MyFirebaseCloudService"
-            android:exported="true"
-            android:permission="com.google.android.c2dm.permission.SEND">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-                <action android:name="com.goole.android.c2dm.intent.RECEIVE" />
-            </intent-filter>
-        </service>
+<!--        <service-->
+<!--            android:name=".common.MyFirebaseCloudService"-->
+<!--            android:exported="true"-->
+<!--            android:permission="com.google.android.c2dm.permission.SEND">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="com.google.firebase.MESSAGING_EVENT" />-->
+<!--                <action android:name="com.goole.android.c2dm.intent.RECEIVE" />-->
+<!--            </intent-filter>-->
+<!--        </service>-->
 
         <activity
             android:name=".activities.MainActivity"
@@ -54,6 +55,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
+
 
 </manifest>
