--- a/apikey.properties
+++ b/apikey.properties
@@ -1,14 +1,14 @@
 ## DEV SITE
-BASE_URL_DEV="https://fakestoreapi.com"
+BASE_URL_DEV="http://10.50.10.57:3000"
 ACCESS_TOKEN_DEV="key_dev_1"
 
 
 # STAGING Site
-BASE_URL_STAGING="https://fakestoreapi.com"
+BASE_URL_STAGING="http://10.50.10.57:3000"
 ACCESS_TOKEN_STAGING=""
 
-
+##https://fakestoreapi.com
 ## LIVE SITE
-BASE_URL_LIVE="https://fakestoreapi.com"
+BASE_URL_LIVE="http://10.50.10.57:3000"
 ACCESS_TOKEN_LIVE=""
 
