--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 07 09:39:03 ICT 2023
-sdk.dir=/Users/admin/Library/Android/sdk
+#Sat Dec 09 14:22:49 ICT 2023
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
