--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,8 @@ dependencies {
 
     // loading
 
+    // worker manager
+    implementation "androidx.work:work-runtime-ktx:2.8.0"
 
     // splash screen
     implementation("androidx.core:core-splashscreen:1.0.1")
