--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,6 +134,8 @@ dependencies {
     // hilt
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt("com.google.dagger:hilt-android-compiler:$hilt_version")
+    implementation ("androidx.hilt:hilt-work:1.0.0")
+    kapt("androidx.hilt:hilt-compiler:1.0.0")
 
     // coroutine
     def  coroutines_version = '1.7.1'
