--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Dec 12 16:02:42 ICT 2023
-sdk.dir=/Users/admin/Library/Android/sdk
+#Sat Dec 16 19:48:17 ICT 2023
+sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
