--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Dec 16 19:48:17 ICT 2023
-sdk.dir=C\:\\Users\\user\\AppData\\Local\\Android\\Sdk
+#Wed Jan 24 16:08:12 ICT 2024
+sdk.dir=/Users/lhd/Library/Android/sdk
